# Portfolio_BE

./: .dockerignore  .editorconfig  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  app.yaml  gae-deploy.sh  main.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
.terraform/: README.md  main.tf  outputs.tf  variables.tf
DomePortfolio/: admin.py  application.py  asgi.py  urls.py  wsgi.py
DomePortfolio/apps/categories/: admin.py  apps.py  urls.py  views.py
DomePortfolio/apps/content/: admin.py  apps.py  urls.py  views.py
DomePortfolio/apps/orders/: admin.py  apps.py  urls.py  views.py
DomePortfolio/apps/portfolio/: admin.py  apps.py  urls.py  views.py
DomePortfolio/apps/shop/: admin.py  apps.py  urls.py  views.py
DomePortfolio/apps/users/: apps.py  views.py
DomePortfolio/custom/: apps.py
DomePortfolio/docs/: openapi.py  settings.py
DomePortfolio/lib/: utils.py  widgets.py
DomePortfolio/lib/images/: __init__.py  processors.py  specs.py  types.py
DomePortfolio/lib/payments/: paypal.py
DomePortfolio/lib/storage/: __init__.py
DomePortfolio/lib/uploads/: handler.py  views.py
DomePortfolio/media/extrawidgets/: image_preview.css  image_preview.scss  video_preview.css  video_preview.js  video_preview.scss
DomePortfolio/media/jquery/: jquery.min.js
DomePortfolio/settings/: development.py  production.py
DomePortfolio/templates/admin/: change_form.html
DomePortfolio/templates/extrawidgets/: image_preview.html  video_preview.html
docker/: docker-compose.dashboard.yml  docker-compose.yml  docker-entrypoint.sh  nginx.dockerfile  prometheus.dockerfile  uwsgi.dockerfile  uwsgi2.dockerfile
server/: custom.conf  install_nginx.sh  nginx-default.conf.template  nginx.conf  prometheus.yml  uwsgi-gae.ini  uwsgi.ini
tests/: conftest.py
tests/integration/: test_categories.py  test_gcp.py  test_payment_flow.py
(+42 files in other folders)
